hphp/hack/test/typecheck/modules/module_traits.php.exp
File "module_traits.php--A.php", line 24, characters 21-21:
You cannot use this type in a public declaration. (Typing[4446])
  File "module_traits.php--A.php", line 21, characters 7-7:
  It is declared as `internal` here
File "module_traits.php--B.php", line 6, characters 7-8:
Cannot access an internal element from module `A` in module `B` (Typing[4444])
  File "module_traits.php--A.php", line 6, characters 7-8:
  This is from module `A`
File "module_traits.php--C.php", line 5, characters 7-8:
Cannot access an internal element from module `A` outside of a module (Typing[4444])
  File "module_traits.php--A.php", line 6, characters 7-8:
  This is from module `A`
